deploy: QuantumPL/site@8427d6f45203bb136f5c45fd5eb73829b3d15c64

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <center>
 <p>Welcome to <em>Quantum Programming Languages & Verification Bibliography</em>.</p>
 <p>Our goal is to provide <a href=/bib/about>canonical bibentries</a> in <a href=https://raw.githubusercontent.com/QuantumPL/bib/main/bbt.bib target=_blank rel=noopener>BibTeX</a> and <a href=https://raw.githubusercontent.com/QuantumPL/bib/main/biblatex.bib target=_blank rel=noopener>BibLaTeX</a> formats.</p>
-<p>Please <a href=https://forms.gle/watgbhcDa5jkf85T7 target=_blank rel=noopener>use this form</a> if you find any mistakes or missing entries.</p>
+<p>Please see the <a href=https://github.com/QuantumPL/bib/blob/main/CONTRIBUTING.md target=_blank rel=noopener>Contributing Guide</a> or <a href=https://forms.gle/watgbhcDa5jkf85T7 target=_blank rel=noopener>use this form</a> if you would like to add/correct any entries.</p>
 <ul class=cta-group>
 <li>
 <a href=./publication/ class="btn btn-primary px-3 py-3">See all publications →</a>
