deploy: QuantumPL/site@fb812c99e19890e863e437e68a0efb6c8019e53d

--- a/index.html
+++ b/index.html
@@ -186,6 +186,31 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Charles-Yuan/>Charles Yuan</a></span>, <span>
+<a href=/bib/author/Michael-Carbin/>Michael Carbin</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yuan2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3563297 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.10255 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/tower-oopsla22 target=_blank rel=noopener>
+URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Liyi-Li/>Liyi Li</a></span>, <span>
 <a href=/bib/author/Finn-Voichick/>Finn Voichick</a></span>, <span>
 <a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
@@ -262,25 +287,6 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://openqasm.com/ target=_blank rel=noopener>
 URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Vikraman-Choudhury/>Vikraman Choudhury</a></span>, <span>
-<a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>, <span>
-<a href=/bib/author/Borislav-Agapiev/>Borislav Agapiev</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Choudhury2022a/>Scheme Pearl: Quantum Continuations</a>.
-<p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://andykeep.com/SchemeWorkshop2022/scheme2022-final37.pdf target=_blank rel=noopener>
-PDF
-</a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Choudhury2022a/cite.bib>
-Cite
 </a>
 </p>
 </div>
