--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -196,7 +196,7 @@ Journal article
 <li><a href=/bib/publication/McCaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a></li>
 <li><a href=/bib/publication/Meuli2020/>Enabling Accuracy-Aware Quantum Compilers Using Symbolic Resource Estimation</a></li>
 <li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
-<li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
+<li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
 </ul>
 </div>
 </div>
