--- a/publication/Li2022/index.html
+++ b/publication/Li2022/index.html
@@ -190,11 +190,15 @@ Journal article
 <div class=article-style><p>OOPSLA &lsquo;22. See arXiv version for full paper with appendix.</p>
 </div>
 <div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/quantum-oracle/>quantum oracle</a>
+<a class="badge badge-light" href=/bib/tag/type-system/>type system</a>
+<a class="badge badge-light" href=/bib/tag/compiler-verification/>compiler verification</a>
+<a class="badge badge-light" href=/bib/tag/programming-language-design/>programming language design</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/bib/publication/Voichick2023/>Qunity: A Unified Language for Quantum and Classical Computing</a></li>
+<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 </ul>
 </div>
 </div>
