--- a/publication/Paltenghi2022/index.html
+++ b/publication/Paltenghi2022/index.html
@@ -177,7 +177,8 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>OOPSLA &lsquo;22</p>
+</div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/quantum-computing-platform/>quantum computing platform</a>
 <a class="badge badge-light" href=/bib/tag/empirical-study/>empirical study</a>
