deploy: QuantumPL/site@14beb4f64e4663d814fce7162af11f999e2b4e8b

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -153,9 +153,21 @@ Existing quantum compilers optimize quantum circuits by applying circuit transfo
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a></h2>
+<div class=article-style>
+Quantum computing hardware has progressed rapidly. Simultaneously, there has been a proliferation of programming languages and program optimization tools for quantum computing. Existing quantum compilers use intermediate representations (IRs) where …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></h2>
 <div class=article-style>
 In this paper, we introduce dynamic lifting to a quantum circuit-description language, following the Proto-Quipper language approach. Dynamic lifting allows programs to transfer the result of measuring quantum data -- qubits -- into classical data -- …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/McCaskey2021a/>A MLIR Dialect for Quantum Assembly Languages</a></h2>
+<div class=article-style>
+We demonstrate the utility of the Multi-Level Intermediate Representation (MLIR) for quantum computing. Specifically, we extend MLIR with a new quantum dialect that enables the expression and compilation of common quantum assembly languages. The true …
 </div>
 </div>
 <div>
