--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -153,6 +153,12 @@ Quantum assembly languages are machine-independent languages that traditionally 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></h2>
+<div class=article-style>
+We present a multilevel quantum-classical intermediate representation (IR) that enables an optimizing, retargetable compiler for available quantum languages. Our work builds upon the multilevel intermediate representation (MLIR) framework and …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/LaRose2022/>Mitiq: A software package for error mitigation on noisy quantum computers</a></h2>
 <div class=article-style>
 We introduce Mitiq, a Python package for error mitigation on noisy quantum computers. Error mitigation techniques can reduce the impact of noise on near-term quantum computers with minimal overhead in quantum resources by relying on a mixture of …
