--- a/publication/Bordg2020a/index.html
+++ b/publication/Bordg2020a/index.html
@@ -198,9 +198,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
-<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 </ul>
 </div>
 </div>
