--- a/publication/Heim2020/index.html
+++ b/publication/Heim2020/index.html
@@ -178,11 +178,11 @@ Thesis
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
+<li><a href=/bib/publication/McCaskey2021a/>A MLIR Dialect for Quantum Assembly Languages</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
-<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
-<li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
 </ul>
 </div>
 </div>
