--- a/publication/Rennela2018/index.html
+++ b/publication/Rennela2018/index.html
@@ -191,10 +191,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></li>
+<li><a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a></li>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
 </ul>
 </div>
 </div>
