--- a/publication/index.html
+++ b/publication/index.html
@@ -348,6 +348,40 @@ Cite
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a>
+</div>
+<a href=/bib/publication/Nguyen2022/ class=summary-link>
+<div class=article-style>
+We present a multilevel quantum-classical intermediate representation (IR) that enables an optimizing, retargetable compiler for …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Thien-Nguyen/>Thien Nguyen</a></span>, <span>
+<a href=/bib/author/Alexander-McCaskey/>Alexander McCaskey</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Nguyen2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/MM.2022.3179654 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.00506 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a>
 </div>
 <a href=/bib/publication/Cross2022/ class=summary-link>
@@ -534,6 +568,9 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3491247 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2101.11030 target=_blank rel=noopener>
+arXiv
 </a>
 </div>
 </div>
@@ -1000,6 +1037,41 @@ Quipper and Proto-Quipper are a family of quantum programming languages that, by
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.13039 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a>
+</div>
+<a href=/bib/publication/Peduri2022/ class=summary-link>
+<div class=article-style>
+Quantum computing hardware has progressed rapidly. Simultaneously, there has been a proliferation of programming languages and program …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Anurudh-Peduri/>Anurudh Peduri</a></span>, <span>
+<a href=/bib/author/Siddharth-Bhat/>Siddharth Bhat</a></span>, <span>
+<a href=/bib/author/Tobias-Grosser/>Tobias Grosser</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peduri2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3497776.3517772 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.02409 target=_blank rel=noopener>
 arXiv
 </a>
 </div>
@@ -1498,6 +1570,40 @@ Over the past 27 years, quantum computing has seen a huge rise in interest from 
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.01320 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/McCaskey2021a/>A MLIR Dialect for Quantum Assembly Languages</a>
+</div>
+<a href=/bib/publication/McCaskey2021a/ class=summary-link>
+<div class=article-style>
+We demonstrate the utility of the Multi-Level Intermediate Representation (MLIR) for quantum computing. Specifically, we extend MLIR …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Alexander-McCaskey/>Alexander McCaskey</a></span>, <span>
+<a href=/bib/author/Thien-Nguyen/>Thien Nguyen</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/McCaskey2021a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1109/QCE52317.2021.00043 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2101.11365 target=_blank rel=noopener>
 arXiv
 </a>
 </div>
