--- a/404.html
+++ b/404.html
@@ -135,11 +135,11 @@
 <li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/publication/Choudhury2022a/>Scheme Pearl: Quantum Continuations</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/LaRose2022/>Mitiq: A software package for error mitigation on noisy quantum computers</a></li>
 <li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
-<li><a href=/bib/publication/Ittah2022/>QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization</a></li>
 </ul>
 </div>
 </div>
