--- a/publication/Amy2019b/index.html
+++ b/publication/Amy2019b/index.html
@@ -194,7 +194,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Cross2017/>Open Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
-<li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 </ul>
 </div>
 </div>
