--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -196,9 +196,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
-<li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
-<li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
+<li><a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a></li>
 </ul>
 </div>
 </div>
