--- a/publication/Green2010/index.html
+++ b/publication/Green2010/index.html
@@ -180,9 +180,9 @@ Thesis
 <ul>
 <li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
-<li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 </ul>
 </div>
 </div>
