--- a/publication/Ittah2022/index.html
+++ b/publication/Ittah2022/index.html
@@ -147,6 +147,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3491247 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2101.11030 target=_blank rel=noopener>
+arXiv
+</a>
 </div>
 </div>
 <div class=article-container>
@@ -189,7 +192,10 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
+<li><a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a></li>
 <li><a href=/bib/publication/QuingoTeam2021/>Quingo: A Programming Framework for Heterogeneous Quantum-Classical Computing with NISQ Features</a></li>
+<li><a href=/bib/publication/McCaskey2021a/>A MLIR Dialect for Quantum Assembly Languages</a></li>
 </ul>
 </div>
 </div>
