--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -192,11 +192,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
+<li><a href=/bib/publication/McCaskey2021a/>A MLIR Dialect for Quantum Assembly Languages</a></li>
 <li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 <li><a href=/bib/publication/McCaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a></li>
 <li><a href=/bib/publication/Meuli2020/>Enabling Accuracy-Aware Quantum Compilers Using Symbolic Resource Estimation</a></li>
-<li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
-<li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
 </ul>
 </div>
 </div>
