--- a/publication/Pechoux2020/index.html
+++ b/publication/Pechoux2020/index.html
@@ -189,10 +189,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
-<li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 </ul>
 </div>
 </div>
