--- a/publication/Singhal2021/index.html
+++ b/publication/Singhal2021/index.html
@@ -200,7 +200,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
-<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 </ul>
 </div>
 </div>
