--- a/publication/Tao2022/index.html
+++ b/publication/Tao2022/index.html
@@ -199,8 +199,8 @@ Conference paper
 <li><a href=/bib/publication/Haner2022/>QParallel: Explicit Parallelism for Programming Quantum Computers</a></li>
 <li><a href=/bib/publication/Li2022/>Verified Compilation of Quantum Oracles</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
-<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 </ul>
 </div>
 </div>
