--- a/publication/Yuan2022/index.html
+++ b/publication/Yuan2022/index.html
@@ -197,9 +197,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
+<li><a href=/bib/publication/Nguyen2022/>Retargetable Optimizing Compilers for Quantum Accelerators via a Multilevel Intermediate Representation</a></li>
 <li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
-<li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 </ul>
 </div>
 </div>
