--- a/publication/Liu2019a/index.html
+++ b/publication/Liu2019a/index.html
@@ -187,15 +187,16 @@ Software
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/hoare-logic/>hoare logic</a>
+<a class="badge badge-light" href=/bib/tag/qhlprover/>qhlprover</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Liu2019/>Formal Verification of Quantum Algorithms Using Quantum Hoare Logic</a></li>
 <li><a href=/bib/publication/Feng2022/>Verification of Distributed Quantum Programs</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
-<li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
