--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -153,6 +153,12 @@ Existing quantum compilers optimize quantum circuits by applying circuit transfo
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Fu2022a/>A biset-enriched categorical model for Proto-Quipper with dynamic lifting</a></h2>
+<div class=article-style>
+Quipper and Proto-Quipper are a family of quantum programming languages that, by their nature as circuit description languages, involve two runtimes: one at which the program generates a circuit and one at which the circuit is executed, normally with …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Peduri2022/>QSSA: An SSA-Based IR for Quantum Computing</a></h2>
 <div class=article-style>
 Quantum computing hardware has progressed rapidly. Simultaneously, there has been a proliferation of programming languages and program optimization tools for quantum computing. Existing quantum compilers use intermediate representations (IRs) where …
